--- a/_boilerplate/ice-ts-react-admin@simple/package.json
+++ b/_boilerplate/ice-ts-react-admin@simple/package.json
@@ -38,6 +38,7 @@
     "ice-plugin-moment-locales": "^0.1.0"
   },
   "scripts": {
+    "install:tyarn": "tyarn install",
     "start": "ice-scripts dev",
     "build": "ice-scripts build",
     "lint": "eslint . --ext '.js,.jsx' --fix"
